# runner

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
examples/: crash_every_10s.rs  crash_unless_arg.rs  maybe_crash_every_10s.rs  maybe_finish_successfuly.rs  never_crash.rs
public/: index.html  index.html.txt  style.css
src/: app_config.rs  command_config.rs  config.rs  config_error.rs  main.rs  monitor_stderr.rs  monitor_stdout.rs  run_command.rs  runner.rs  runner_error.rs  tui.rs  tui_helper.rs  tui_state.rs
