[package]
name = "runner"
version = "0.3.3"
edition = "2021"

[dependencies]
async-std = { version="1.10", features=["unstable"] }
chrono = "0.4"
circular-queue = "0.2"
clap = { version="3.0", features=["cargo"] }
futures = "0.3"
serde_json = "1.0"
subprocess = "0.2"
termion = "1.5"
tui = "0.16"

[dev-dependencies]
rand = "0.8"
